[package]
name = "starling"
version = "0.1.0"
edition = "2021"

[dependencies]
orgish = { version = "0.1", path = "../../orgish/orgish/packages/orgish" }
parking_lot = "0.12.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1"
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread", "fs", "sync" ] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.12.0"
